Fix formatting on button style 1 dark mode

--- a/web-client/src/Styles/global.scss
+++ b/web-client/src/Styles/global.scss
@@ -16,17 +16,16 @@ body {
 }
 
 .button-style-1-dark {
-  @extend .button-style-1;
   background-color: black;
   border-color: $gunsmoke;
   color: $gunsmoke;
   &.selected {
     border-color: $alto;
     color: $gallery;
-    background-color: inherit;
+    background-color: black;
   }
   &:hover {
-    background-color: inherit;
+    background-color: black;
     color: $alto;
   }
 }
@@ -69,6 +68,7 @@ body {
   .choose-login-form-or-create-user-form-buttons {
     display: inline-block;
     button {
+        @extend .button-style-1;
         @extend .button-style-1-dark;
         display: inline-block;
         margin: 20px 20px 0px 20px;
@@ -125,18 +125,7 @@ body {
       }
 
       .button-style-1 {
-        background-color: black;
-        border-color: $gunsmoke;
-        color: $gunsmoke;
-        &.selected {
-          border-color: $alto;
-          color: $gallery;
-          background-color: inherit;
-        }
-        &:hover {
-          background-color: inherit;
-          color: $alto;
-        }
+        @extend .button-style-1-dark;
       }
 
       .button-style-2 {
